--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header flex bg-blue-300 flex-col text-center py-5">
     <h1 class="text-3xl mb-5">Covid Tracker</h1>
     <nav>
-      <button id="input-btn" onclick="input()"
+      <button id="input-btn"
         class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 mr-2 transition-all duration-300">Input</button>
       <button id="update-btn" onclick="update()"
         class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300">Update</button>
@@ -64,7 +64,7 @@
     </div>
     <div class="btn  flex justify-center mt-6">
       <button
-        class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300">search</button>
+        class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300" id="search-btn">search</button>
     </div>
   </article>
 
