fitur CRUD beres

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <button id="input-btn"
         class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 mr-2 transition-all duration-300">Input</button>
-      <button id="update-btn" onclick="update()"
+      <button id="update-btn"
         class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300">Update</button>
     </nav>
   </header>
