--- a/index.html
+++ b/index.html
@@ -11,60 +11,68 @@
 </head>
 
 <body>
-  <header class="header flex bg-blue-300 flex-col text-center py-5">
-    <h1 class="text-3xl mb-5">Covid Tracker</h1>
-    <nav>
+  <header class="header flex bg-black bg-opacity-25 flex-col text-center py-5">
+    <h1 class="text-3xl mb-5 text-white ">Covid Tracker</h1>
+    <div class="inline-flex justify-center">
+      <button id="input-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l duration-300">
+        Input
+      </button>
+      <button id="update-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r duration-300">
+        Update
+      </button>
+    </div>
+    <!-- <nav>
       <button id="input-btn"
         class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 mr-2 transition-all duration-300">Input</button>
       <button id="update-btn"
         class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300">Update</button>
-    </nav>
+    </nav> -->
   </header>
 
-  <article id="input" class="bg-blue-500 flex flex-col justify-center w-1/2 mx-auto p-14 mt-5">
-    <div class="form-input  w-2/3 mx-auto bg-blue-400 p-4 rounded-lg">
+  <article id="input" class="bg-white bg-opacity-30  flex flex-col justify-center w-1/2 mx-auto p-14 mt-5 rounded-lg">
+    <div class="form-input  w-2/3 mx-auto bg-white bg-opacity-50  p-4 rounded-lg">
       <div class="nama mb-5 flex justify-between">
-        <label for="nama">Nama:</label>
-        <input type="text" id="nama" name="nama">
+        <label for="nama" class="font-bold text-base">Nama :</label>
+        <input type="text" id="nama" name="nama" placeholder="Masukkan Nama" class="p-1">
       </div>
       <div class="alamat mb-5 flex justify-between">
-        <label for="alamat">Alamat :</label>
-        <input type="text" id="alamat" name="alamat">
+        <label for="alamat" class="font-bold text-base">Alamat :</label>
+        <input type="text" id="alamat" name="alamat" class="p-1" placeholder="Alamat">
       </div>
       <div class="umur mb-5 flex justify-between">
-        <label for="umur">Umur :</label>
-        <input type="number" id="umur" name="umur">
+        <label for="umur" class="font-bold text-base">Umur :</label>
+        <input type="number" id="umur" name="umur" class="p-1" placeholder="Umur">
       </div>
       <div class="jenis-kelamin mb-5 flex justify-between align-middle ">
-        <label>Jenis Kelamin :</label>
+        <label class="font-bold text-base">Jenis Kelamin :</label>
         <div class="kelamin">
           <input type="radio" id="jenis-kelamin-pria" name="jenis-kelamin" value="Pria">
-          <label for="jenis-kelamin-pria" class="mr-16">Pria</label>
+          <label for="jenis-kelamin-pria" class="mr-16 font-bold">Pria</label>
           <input type="radio" id="jenis-kelamin-wanita" name="jenis-kelamin" value="Wanita" class="ml-1">
-          <label for="jenis-kelamin-wanita">Wanita</label>
+          <label for="jenis-kelamin-wanita" class="font-bold">Wanita</label>
         </div>
       </div>
       <div class="no-handphone mb-5 flex justify-between">
-        <label for="no-hp">No. Handphone :</label>
-        <input type="number" id="no-hp" name="no-hp">
+        <label for="no-hp" class="font-bold text-base">No. Handphone :</label>
+        <input type="number" id="no-hp" name="no-hp" class="p-1" placeholder="No.Telp">
       </div>
     </div>
     <div class="btn  flex justify-center mt-6">
       <button
-        class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300" id="btn-submit">Submit!</button>
+        class="bg-blue-700 hover:bg-blue-800 text-white  py-2 px-4 rounded transition-all duration-300" id="btn-submit">Submit!</button>
     </div>
   </article>
 
 
-  <article id="update" class="bg-blue-500 flex flex-col justify-center w-1/2 mx-auto p-14 mt-5 hidden">
+  <article id="update" class="bg-white bg-opacity-30  rounded-lg flex flex-col justify-center w-1/2 mx-auto p-14 mt-5 hidden ">
     <!-- if event listener button update click, pake class list display jadi none, utk DOM -->
-    <div class="form-update  w-2/3 mx-auto bg-blue-400 p-4 rounded-lg flex justify-between">
-      <label for="nama-update">Nama :</label>
-      <input type="text" id="nama-update" name="nama-update">
+    <div class="form-update  w-2/3 mx-auto bg-white bg-opacity-50 p-4 rounded-lg flex justify-between ">
+      <label for="nama-update" class="font-bold text-base">Nama :</label>
+      <input type="text" id="nama-update" name="nama-update" placeholder="Nama yang ingin dicari" class="p-1">
     </div>
     <div class="btn  flex justify-center mt-6">
       <button
-        class="py-2 px-3 rounded-lg bg-gray-400 text-white hover:bg-gray-500 ml-2 transition-all duration-300" id="search-btn">search</button>
+        class="bg-blue-700 hover:bg-blue-800 text-white  py-2 px-4 rounded transition-all duration-300" id="search-btn">Search Now</button>
     </div>
   </article>
 
