--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav> -->
   </header>
 
-  <article id="input" class="bg-white bg-opacity-30  flex flex-col justify-center w-1/2 mx-auto p-14 mt-5 rounded-lg">
+  <article id="input" class="flex flex-col justify-center w-1/2 mx-auto p-14 mt-5 rounded-lg">
     <div class="form-input  w-2/3 mx-auto bg-white bg-opacity-50  p-4 rounded-lg">
       <div class="nama mb-5 flex justify-between">
         <label for="nama" class="font-bold text-base">Nama :</label>
